# tdx

./: setup-tdx-common  setup-tdx-guest.sh
attestation/full-disk-encryption/: .wirking.swp  Cargo.toml  Makefile  README.md  config.json  fde_key.go  genkeys.go  go_key_gen.go  gokeygen.go  private.pem  public.pem  tdx_guest_load.sh
attestation/full-disk-encryption/docs/: Full_disk_encryption_recipe.docx
attestation/full-disk-encryption/fde-key-gen/: Cargo.toml  Makefile
attestation/full-disk-encryption/fde-key-gen/src/: main.rs
attestation/full-disk-encryption/src/: convert_base64.rs  disk.rs  disk.rs_org  main.rs  main.rs_mod  main.rs_org  quote.rs  td_report.rs  testcode.rs
attestation/full-disk-encryption/tools/image/: fde-image.sh
attestation/full-disk-encryption/tools/image/scripts/: install  partition
attestation/full-disk-encryption/tools/initramfs/: modules
attestation/full-disk-encryption/tools/initramfs/hooks/: bash  curl  go  go_key_gen  openssl  ping  ssl  strace  tdx-attest  telnet  trustauthority-cli  update-ca-certificates  vim
attestation/full-disk-encryption/tools/initramfs/scripts/init-premount/: fde-agent  fde-agent_mod
device_passthrough/: README.md
guest-tools/: run_td.sh
